Trying to fix overflow issue when width is reduced again. Width and font size changes to Arbete page.

--- a/style.css
+++ b/style.css
@@ -201,6 +201,7 @@ h1{
 }
 
 .expertis_header{
+    max-width: 100%;
     font-size: 3em;
     color: antiquewhite;
     background-color: rgba(46, 45, 53, 0.3);
@@ -216,7 +217,7 @@ h1{
 
 .expertis_div{
     margin-left: auto; margin-right: auto;
-    width: 50%;
+    width: 70%;
     background-color: rgba(60, 59, 68, 0.5);
 }
 
@@ -251,16 +252,16 @@ h1{
 }
 
 .besiktning_header{
-    font-size: 2em;
+    font-size: 3em;
     color: antiquewhite;
-    padding: 10px;
+    padding: 20px;
 }
 
 .besiktning_text{
     font-size: 1.2em;
     color: antiquewhite;
     margin-left: 0px;
-    padding: 10px;
+    padding: 20px;
 }
 
 .besiktning_div{
